--- a/card.css
+++ b/card.css
@@ -1,9 +1,10 @@
 *{
     margin:auto;
+
 }
 body{
   background-color: rgb(82, 198, 206); 
-  
+  padding-top: 150px;
 }
 
 .mother{
@@ -16,8 +17,8 @@ padding: 50px;
     padding-left:75px;
 }
 .photo{
-    height:150px;
-    width: 150px;
+    height:140px;
+    width: 140px;
     border-radius: 50%;
     border: rgb(94, 177, 27) 5px solid;
     box-shadow:2px 3px 5px red;
@@ -26,4 +27,6 @@ padding: 50px;
     color:rgb(96, 112, 79);
     font-size:50px;
     font-family:monospace;
+    
 }
+
